# tokeniser

./: CMakeLists.txt  LICENSE  README.md  corpus.cpp  embedding.cpp  group.cpp  kernel.cu  kernelcl.cpp  main.cpp  merge.cpp  pairstats.cpp  readFiles.cpp  set.cpp  split.cpp  splitParallel.cpp  support.cpp  text.txt  tokenise.cpp  tokenise.h  train.cpp
include/: clcontext.hpp  tokenise.hpp
src/: CMakeLists.txt  embedding.cpp  kernel.cu  readFiles.cpp  set.cpp  utility.cpp
src/include/: clcontext.hpp  tokenise.hpp
src/nn/: CMakeLists.txt  neuralNet.hpp  nn.cpp
src/nn/include/: clcontext.hpp  neuralnet.hpp
src/token/: CMakeLists.txt  corpus.cpp  embedding.cpp  group.cpp  kernel.cu  kernelcl.cpp  merge.cpp  pairstats.cpp  readFiles.cpp  set.cpp  tokenise.cpp  train.cpp  utility.cpp
src/token/include/: tokenise.hpp
